--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "metismenujs": "^1.1.0",
     "ng-apexcharts": "^1.0.5",
     "ng-click-outside": "^5.1.1",
+    "ng-multiselect-dropdown": "^0.3.4",
+    "ngx-awesome-uploader": "^8.0.3",
     "ngx-bootstrap": "^5.1.2",
     "ngx-color-picker": "^8.2.0",
     "ngx-drag-drop": "^2.0.0",
@@ -50,7 +52,6 @@
     "rxjs": "~6.5.3",
     "smooth-scrollbar": "^8.3.1",
     "tslib": "^1.10.0",
-    "ngx-awesome-uploader": "^8.0.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
